working heavy files, fixed bug historial repo sizing files. now working in main proving the commits

--- a/Pagina Web/punk.html
+++ b/Pagina Web/punk.html
@@ -22,7 +22,7 @@
             <li><a href="">Melodic Hardcore</a></li>
             <li><a href="">Straight Edge</a></li>
             <li><a href="">Youth Crew</a></li>
-            <li><a href="">Egg Punk</a></li>
+            <li><a href="">Eg Punk</a></li>
             <li><a href="">Folk Punk</a></li>
           </ul>
       </div>
