se ha agregado una imagen preview para el menu

--- a/Pagina Web/menu.html
+++ b/Pagina Web/menu.html
@@ -28,7 +28,7 @@
             <a href="paises.html"><img src="previews/mapa-mundi.jpg" alt=""><h3 class="texto-magico">Paises</h3></a>
           </div>
           <div class="caja">
-            <a href=""><img src="" alt=""><h3 class="texto-magico">Movimientos</h3></a>
+            <a href=""><img src="previews/music-movement.png" alt=""><h3 class="texto-magico">Movimientos</h3></a>
           </div>
           <div class="caja">
             <a href=""><img src="previews/scene.webp" alt=""><h3 class="texto-magico">Escenas</h3></a>
