se esta agregando una explicacion en la seccion de España

--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -12,8 +12,12 @@
       <p>
         La musica en España tiene muchos años de historia, pero no seria a
         partir del año 74, la muerte del dictador Francisco Franco, que no
-        empezaria mostrar su potencial.
+        empezaria mostrar su potencial. Desde La Movida Madrileña hasta el Rock
+        Radical Vasco.
       </p>
+    </div>
+    <div class="Explicacion-Movida">
+      <h1>La Movida Madrileña</h1>
     </div>
   </body>
 </html>
