se han subido dos imagenes de ejemplo y se esta haciendo la explicacion de la seccion de ' España '

--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -15,6 +15,10 @@
         empezaria mostrar su potencial. Desde La Movida Madrileña hasta el Rock
         Radical Vasco.
       </p>
+      <section class="seccion-img">
+        <img src="imagenes/ejemplos/movida.jpg" alt="">
+        <img src="imagenes/ejemplos/rock-radikal.jpg" alt="">
+      </section>
     </div>
     <div class="Explicacion-Movida">
       <h1>La Movida Madrileña</h1>
