se ha corregido el directorio de las imagenes de preview en ' paises ' y en ' menu '

--- a/Pagina Web/menu.html
+++ b/Pagina Web/menu.html
@@ -22,16 +22,16 @@
       <div class="caja-principal">
         <div class="caja-1">
           <div class="caja">
-            <a href="generos.html"><img src="previews/preview-1.png" alt=""><h3 class="texto-magico">Generos</h3></a>
+            <a href="generos.html"><img src="imagenes/previews/preview-1.png" alt=""><h3 class="texto-magico">Generos</h3></a>
           </div>
           <div class="caja">
-            <a href="paises.html"><img src="previews/mapa-mundi.jpg" alt=""><h3 class="texto-magico">Paises</h3></a>
+            <a href="paises.html"><img src="imagenes/previews/mapa-mundi.jpg" alt=""><h3 class="texto-magico">Paises</h3></a>
           </div>
           <div class="caja">
-            <a href=""><img src="previews/music-movement.png" alt=""><h3 class="texto-magico">Movimientos</h3></a>
+            <a href=""><img src="imagenes/previews/music-movement.png" alt=""><h3 class="texto-magico">Movimientos</h3></a>
           </div>
           <div class="caja">
-            <a href=""><img src="previews/scene.webp" alt=""><h3 class="texto-magico">Escenas</h3></a>
+            <a href=""><img src="imagenes/previews/scene.webp" alt=""><h3 class="texto-magico">Escenas</h3></a>
           </div>
         </div>
       </div>
