--- a/Pagina Web/paises.html
+++ b/Pagina Web/paises.html
@@ -22,18 +22,18 @@
       <div class="cajita-suprema">
         <div class="cajita-main">
           <div class="cajita-magica">
-            <a href="españa.html"> <img src="banderas-paises/españa.jpg" alt=""><h3 class="texto-magico">España</h1></a>
+            <a href="españa.html"> <img src="imagenes/banderas-paises/españa.jpg" alt=""><h3 class="texto-magico">España</h1></a>
         </div>
         <div class="cajita-magica">
-          <a href="banderas-paises/USA.png"><img src="" alt=""><h3 class="texto-magico">Estados Unidos</h1></a>
+          <a href="imagenes/banderas-paises/USA.png"><img src="" alt=""><h3 class="texto-magico">Estados Unidos</h1></a>
       </div>
         </div>
     </div>
     <div class="cajita-main2">
       <div class="cajita-magica">
-        <a href=""><img src="banderas-paises/LATAM.jpg" alt=""><h3 class="texto-magico">Latino America</h1></a>
+        <a href=""><img src="imagenes/banderas-paises/LATAM.jpg" alt=""><h3 class="texto-magico">Latino America</h1></a>
     </div>
     <div class="cajita-magica">
-      <a href=""><img src="banderas-paises/Japon.jpg" alt=""><h3 class="texto-magico">Japon</h1></a>
+      <a href=""><img src="imagenes/banderas-paises/Japon.jpg" alt=""><h3 class="texto-magico">Japon</h1></a>
   </body>
 </html>
