se ha corregido el error que tenia con la imagen de USA

--- a/Pagina Web/paises.html
+++ b/Pagina Web/paises.html
@@ -25,7 +25,7 @@
             <a href="españa.html"> <img src="imagenes/banderas-paises/españa.jpg" alt=""><h3 class="texto-magico">España</h1></a>
         </div>
         <div class="cajita-magica">
-          <a href="imagenes/banderas-paises/USA.png"><img src="" alt=""><h3 class="texto-magico">Estados Unidos</h1></a>
+          <a href=""><img src="imagenes/banderas-paises/USA.png" alt=""><h3 class="texto-magico">Estados Unidos</h1></a>
       </div>
         </div>
     </div>
