se han hecho dos cajas de ejemplos en la seccion ' España '

--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -15,13 +15,16 @@
         empezaria mostrar su potencial. Desde La Movida Madrileña hasta el Rock
         Radical Vasco.
       </p>
-      <section class="seccion-img">
-        <img src="imagenes/ejemplos/movida.jpg" alt="">
-        <img src="imagenes/ejemplos/rock-radikal.jpg" alt="">
-      </section>
     </div>
-    <div class="Explicacion-Movida">
-      <h1>La Movida Madrileña</h1>
+    <div class="seccion">
+      <div class="caja-1">
+        <div class="caja">
+          <img src="imagenes/ejemplos/movida.jpg" alt=""><h3>Movida Madrileña</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/rock-radikal.jpg" alt=""><h3>Rock Radical Vasco</h3>
+        </div>
+      </div>
     </div>
   </body>
 </html>
