se ha subido una imagen de ejemplo y se ha hecho un container con el titulo en la seccion ' España ' de la seccion ' paises '

--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="container">
+      <nav class="nav-container">
+        <ul class="ul-container">
+          <h1>La Musica En España</h1>
+          <p>Antonio Agüera Pérez</p>
+        </ul>
+      </nav>
+    </div>
     <div class="main">
-      <h1>Musica en España</h1>
       <p>
         La musica en España tiene muchos años de historia, pero no seria a
         partir del año 74, la muerte del dictador Francisco Franco, que no
@@ -19,12 +26,23 @@
     <div class="seccion">
       <div class="caja-1">
         <div class="caja">
-          <img src="imagenes/ejemplos/movida.jpg" alt=""><h3>Movida Madrileña</h3>
+          <img src="imagenes/ejemplos/movida.jpg" alt="" />
+          <h3>Movida Madrileña</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/rock-radikal.jpg" alt=""><h3>Rock Radical Vasco</h3>
+          <img src="imagenes/ejemplos/rock-radikal.jpg" alt="" />
+          <h3>Rock Radical Vasco</h3>
         </div>
       </div>
+    </div>
+    <div class="explicacion-movida">
+      <h1>La Movida Madrileña</h1>
+      <p>
+        La Movida Madrileña fue un movimiento contra-cultural surgido en España
+        tras la dictadura franquista, todo empezaria con el concierto homenaje a
+        Canito en el febrero de 1980
+      </p>
+      <img src="imagenes/ejemplos/concierto-canito.jpg" alt="" />
     </div>
   </body>
 </html>
