se ha hecha una seccion de contenido para los artistas mencionas en la seccion ' españa ' del apartado de paises

--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -43,6 +43,26 @@
         Canito en el febrero de 1980
       </p>
       <img src="imagenes/ejemplos/concierto-canito.jpg" alt="" />
+      <p>La Movida se destaco por su gran numeros de artistas, que entre ellos se destacan Alaska Y Los Pegamoides, Los Secretos, Radio Futura, Nacha Pop, Los Rebeldes o Tequila!</p>
+    </div>
+    <div class="seccion">
+      <div class="caja-1">
+        <div class="caja">
+          <img src="imagenes/ejemplos/los-pegamoides.jpg" alt=""><h3>Los Pegamoides</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/los-secretos.jpg" alt=""><h3>Los Secretos</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/nacha pop.jpg" alt=""><h3>Nacha Pop</h3>
+        </div>
+        <div class="caja"> 
+          <img src="imagenes/ejemplos/Tequila.jpg" alt=""><h3>Tequila!</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/los-rebeldes.jpg" alt=""><h3>Los Rebeldes</h3>
+        </div>
+      </div>
     </div>
   </body>
 </html>
