--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -94,13 +94,19 @@
           <h3>Anti-Otan</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/manifestacion-mili.jpg" alt=""><h3>Anti-Mili</h3>
+          <img src="imagenes/ejemplos/manifestacion-mili.jpg" alt="" />
+          <h3>Anti-Mili</h3>
         </div>
       </div>
     </div>
     <div class="bandas-figuras">
-      <h1>Bandas del  Rock Radical Vasco</h1>
-      <p class=""></p>
+      <h1>Bandas del Rock Radical Vasco</h1>
+      <p>
+        El Rock Radical Vasco se caracterizo por sus bandas que quisieron hacer
+        un cambio en la forma de pensar y ver las cosas de sus oyentes, bandas
+        como Kortatu, La Polla, Eskorbuto, Hertzainak, Cicatriz o Vomito
+        marcaron un antes y después
+      </p>
     </div>
   </body>
 </html>
