se ha subido una imagen y se ha completado la pagina ' España ' del apartado Paises '

--- a/Pagina Web/españa.html
+++ b/Pagina Web/españa.html
@@ -108,5 +108,36 @@
         marcaron un antes y después
       </p>
     </div>
+    <div>
+      <h1 class="titulo-bandas">Bandas</h1>
+      <div class="seccion">
+        <div class="caja-1">
+          <div class="caja">
+            <img src="imagenes/ejemplos/la-polla.jpg" alt="" />
+            <h3>La Polla Records</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/eskorbuto.jpg" alt="" />
+            <h3>Eskorbuto</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/kortatu.jpg" alt="" />
+            <h3>Kortatu</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/cicatriz-bamda.jpg" alt="" />
+            <h3>Cicatriz</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/hertzainak.jpg" alt="" />
+            <h3>Hertzainak</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/vomito.jpg" alt="" />
+            <h3>Vomito</h3>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
