se han subido 5 imagenes, y se han hecho cajas de contenido para la seccion USA

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -18,13 +18,40 @@
     <div class="Explicacion-1">
       <p>
         La Musica En Estados Unidos forma parte de la cultura diaria de sus
-        habitantes pero solo nos centraremos en los generos mas importantes
-        el Punk y El Metal.
-      <p>
+        habitantes pero solo nos centraremos en los generos mas importantes el
+        Punk y El Metal.
+      </p>
+
+      <p></p>
     </div>
+
     <div class="img-1">
-      <img src="imagenes/Black Flag.jpg" alt="">
+      <img src="imagenes/Black Flag.jpg" alt="" />
       <p>Black Flag en Concierto, Costa Mesa, 1981</p>
+    </div>
+    <div class="Punk-USA">
+      El Punk empezo en Estados Unidos a finales de la decada de los 70,
+      influenciados por el movimiento Britanico, en Estados Unidos surgio una
+      vertiente que se haria conocida a nivel mundial, el Hardcore Punk.
+    </div>
+    <div class="seccion">
+      <div class="caja-1">
+        <div class="caja">
+          <img src="imagenes/ejemplos/hardcore punk.jpg" alt=""><h3>Hardcore Punk</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/Ska Punk.png" alt=""><h3>Ska Punk</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/straight edge.jpg" alt=""><h3>Straight Edge</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/pop punk.jpg" alt=""><h3>Pop Punk</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/post-hardcore.jpg" alt=""><h3>Post Hardcore</h3>
+        </div>
+      </div>
     </div>
   </body>
 </html>
