se han subido tres imagenes y se esta intentando hacer una segunda seccion de contenido

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -21,8 +21,6 @@
         habitantes pero solo nos centraremos en los generos mas importantes el
         Punk y El Metal.
       </p>
-
-      <p></p>
     </div>
 
     <div class="img-1">
@@ -37,21 +35,33 @@
     <div class="seccion">
       <div class="caja-1">
         <div class="caja">
-          <img src="imagenes/ejemplos/hardcore punk.jpg" alt=""><h3>Hardcore Punk</h3>
+          <img src="imagenes/ejemplos/hardcore punk.jpg" alt="" />
+          <a href="#Hardcore-Punk"><h3>Hardcore Punk</h3></a>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/Ska Punk.png" alt=""><h3>Ska Punk</h3>
+          <img src="imagenes/ejemplos/Ska Punk.png" alt="" />
+          <h3>Ska Punk</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/straight edge.jpg" alt=""><h3>Straight Edge</h3>
+          <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
+          <h3>Straight Edge</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/pop punk.jpg" alt=""><h3>Pop Punk</h3>
+          <img src="imagenes/ejemplos/pop punk.jpg" alt="" />
+          <h3>Pop Punk</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/post-hardcore.jpg" alt=""><h3>Post Hardcore</h3>
+          <img src="imagenes/ejemplos/post-hardcore.jpg" alt="" />
+          <h3>Post Hardcore</h3>
         </div>
       </div>
+      <div class="Hardcore-Punk">
+        <a href="#Hardcore-Punk"><h3>Hardcore Punk</h3></a>
+        <p>
+          El Hardcore Punk surgio a finales de los 70 cuando bandas como The
+          Middle Class, Black Flag y Bad Brains tomaron el punk y lo hicieron
+          mucho mas acelerado y rapido
+        </p>
     </div>
   </body>
 </html>
