--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -36,11 +36,11 @@
       <div class="caja-1">
         <div class="caja">
           <img src="imagenes/ejemplos/hardcore punk.jpg" alt="" />
-          <a href="#Hardcore-Punk"><h3>Hardcore Punk</h3></a>
+          <a href="#Hardcore Punk"><h3>Hardcore Punk</h3></a>
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/Ska Punk.png" alt="" />
-          <h3>Ska Punk</h3>
+          <a href="#Ska Punk"><h3>Ska Punk</h3></a>
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
@@ -55,13 +55,30 @@
           <h3>Post Hardcore</h3>
         </div>
       </div>
-      <div class="Hardcore-Punk">
-        <a href="#Hardcore-Punk"><h3>Hardcore Punk</h3></a>
+      <div class="Hardcore-Punk" id="Hardcore Punk">
+       <h3>Hardcore Punk</h3>
         <p>
           El Hardcore Punk surgio a finales de los 70 cuando bandas como The
           Middle Class, Black Flag y Bad Brains tomaron el punk y lo hicieron
           mucho mas acelerado y rapido
         </p>
+        <div class="seccion-2">
+          <div class="caja-2">
+            <div class="caja">
+              <img src="imagenes/ejemplos/black flag.webp" alt=""><h3>Black Flag</h3>
+            </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/bad brains.jpg" alt=""><h3>Bad Brains</h3>
+            </div>
+            <div class="caja">
+              <img src="imagenes/ejemplos/the middle class band.jpg" alt=""><h3>The Middle Class</h3>
+            </div>
+          </div>
+        </div>
+        <div class="Ska-Punk" id="Ska Punk">
+          <h3>Ska Punk</h3>
+          <p>El Ska Punk es un genero originado a principios de los 90 en USA, en el que se mezcla el Ska con el Punk, creando una curiosa fusion de generos, el Ska Punk utiliza una seccion de vientos, como trompeta, trombon o saxofon</p>
+        </div>
     </div>
   </body>
 </html>
