se ha vuelto hacer toda la seccion de USA

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <div class="container">
-      <nav class="nav-container">
-        <ul class="ul-container">
-          <h1>La Musica en Estados Unidos (Desde el Punk al Metal)</h1>
+      <div class="nav-container">
+        <div class="ul-container">
+          <h1>Musica En USA</h1>
           <p>Antonio Agüera Pérez</p>
-        </ul>
-      </nav>
+        </div>
+      </div>
     </div>
     <div class="Explicacion-1">
       <p>
@@ -22,17 +22,17 @@
         Punk y El Metal.
       </p>
     </div>
-
     <div class="img-1">
       <img src="imagenes/Black Flag.jpg" alt="" />
-      <p>Black Flag en Concierto, Costa Mesa, 1981</p>
     </div>
     <div class="Punk-USA">
-      El Punk empezo en Estados Unidos a finales de la decada de los 70,
-      influenciados por el movimiento Britanico, en Estados Unidos surgio una
-      vertiente que se haria conocida a nivel mundial, el Hardcore Punk.
+      <p>
+        El Punk empezo en Estados Unidos a finales de la decada de los 70,
+        influenciados por el movimiento Britanico, en Estados Unidos surgio una
+        vertiente que se haria conocida a nivel mundial, el Hardcore Punk.
+      </p>
     </div>
-    <div class="seccion">
+    <div class="seccion-1">
       <div class="caja-1">
         <div class="caja">
           <img src="imagenes/ejemplos/hardcore punk.jpg" alt="" />
@@ -40,45 +40,54 @@
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/Ska Punk.png" alt="" />
-          <a href="#Ska Punk"><h3>Ska Punk</h3></a>
-        </div>
-        <div class="caja">
-          <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
-          <h3>Straight Edge</h3>
+          <h3>Ska Punk</h3>
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/pop punk.jpg" alt="" />
           <h3>Pop Punk</h3>
         </div>
         <div class="caja">
+          <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
+          <h3>Straight Edge</h3>
+        </div>
+        <div class="caja">
           <img src="imagenes/ejemplos/post-hardcore.jpg" alt="" />
           <h3>Post Hardcore</h3>
         </div>
       </div>
-      <div class="Hardcore-Punk" id="Hardcore Punk">
-       <h3>Hardcore Punk</h3>
-        <p>
-          El Hardcore Punk surgio a finales de los 70 cuando bandas como The
-          Middle Class, Black Flag y Bad Brains tomaron el punk y lo hicieron
-          mucho mas acelerado y rapido
-        </p>
-        <div class="seccion-2">
-          <div class="caja-2">
-            <div class="caja">
-              <img src="imagenes/ejemplos/black flag.webp" alt=""><h3>Black Flag</h3>
-            </div>
-            <div class="caja">
-              <img src="imagenes/ejemplos/bad brains.jpg" alt=""><h3>Bad Brains</h3>
-            </div>
-            <div class="caja">
-              <img src="imagenes/ejemplos/the middle class band.jpg" alt=""><h3>The Middle Class</h3>
-            </div>
-          </div>
+    </div>
+    <div class="Hardcore-Punk" id="Hardcore Punk">
+      <h3>Hardcore Punk</h3>
+      <p>
+        El Hardcore Punk surgio a finales de los 70 cuando bandas como The
+        Middle Class, Black Flag y Bad Brains tomaron el punk y lo hicieron
+        mucho mas acelerado y rapido
+      </p>
+    </div>
+    <div class="seccion-2">
+      <div class="caja-2">
+        <div class="caja">
+          <img src="imagenes/ejemplos/black flag.webp" alt="" />
+          <h3>Black Flag</h3>
         </div>
-        <div class="Ska-Punk" id="Ska Punk">
-          <h3>Ska Punk</h3>
-          <p>El Ska Punk es un genero originado a principios de los 90 en USA, en el que se mezcla el Ska con el Punk, creando una curiosa fusion de generos, el Ska Punk utiliza una seccion de vientos, como trompeta, trombon o saxofon</p>
+        <div class="caja">
+          <img src="imagenes/ejemplos/bad brains.jpg" alt="" />
+          <h3>Bad Brains</h3>
         </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/the middle class band.jpg" alt="" />
+          <h3>The Middle Class</h3>
+        </div>
+      </div>
+    </div>
+    <div class="Ska-Punk" id="Ska Punk">
+      <h3>Ska Punk</h3>
+      <p>
+        El Ska Punk es un genero originado a principios de los 90 en USA, en el
+        que se mezcla el Ska con el Punk, creando una curiosa fusion de generos,
+        el Ska Punk utiliza una seccion de vientos, como trompeta, trombon o
+        saxofon
+      </p>
     </div>
   </body>
 </html>
