se esta acabando la seccion de Ska Punk y se han subido 4 imagenes para esta

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -40,7 +40,7 @@
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/Ska Punk.png" alt="" />
-          <h3>Ska Punk</h3>
+          <a href="#Ska Punk"><h3>Ska Punk</h3></a>
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/pop punk.jpg" alt="" />
@@ -88,6 +88,13 @@
         el Ska Punk utiliza una seccion de vientos, como trompeta, trombon o
         saxofon
       </p>
+    </div>
+    <div class="seccion-3">
+      <div class="caja-3">
+        <div class="caja">
+          <img src="" alt="">
+        </div>
+      </div>
     </div>
   </body>
 </html>
