se han agregado dos videos a USA

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -79,6 +79,16 @@
           <h3>The Middle Class</h3>
         </div>
       </div>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/oPQpbm8j504?si=uvhKTDzcqdyzkz2Z"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
     </div>
     <div class="Ska-Punk" id="Ska Punk">
       <h3>Ska Punk</h3>
@@ -92,9 +102,33 @@
     <div class="seccion-3">
       <div class="caja-3">
         <div class="caja">
-          <img src="" alt="">
+          <img src="imagenes/ejemplos/reel big fish.jpg" alt="" />
+          <h3>Reel Big Fish</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/less-than-jake.jpg" alt="" />
+          <h3>Less Than Jake</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/streetlight-manifesto.jpg" alt="" />
+          <h3>Streetlight Manifesto</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/ASOB.jpg" alt="" />
+          <h3>Arrogant Sons of Bitches</h3>
         </div>
       </div>
+      <iframe
+        class="video"
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/_F-ipYpd53I?si=o0Q_pemjw_7Koi0Q"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
     </div>
   </body>
 </html>
