se esta haciendo el apartado Pop Punk en USA y se han subido 4 imagenes para este

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -44,7 +44,7 @@
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/pop punk.jpg" alt="" />
-          <h3>Pop Punk</h3>
+          <a href="#Pop Punk"><h3>Pop Punk</h3></a>
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
@@ -129,6 +129,22 @@
         referrerpolicy="strict-origin-when-cross-origin"
         allowfullscreen
       ></iframe>
+    </div>
+    <div class="Pop-Punk" id="Pop Punk">
+      <h3>Pop Punk</h3>
+      <p>
+        El Pop Punk es un genero surgido en los mediados de los 90 fusionando el
+        Punk Rock con el Pop Rock, a diferencia de otros subgeneros, el Pop Punk
+        es más comercial con toques festivos y de diversion a diferencia del
+        lado politico del punk
+      </p>
+    </div>
+    <div class="seccion-4">
+      <div class="caja-4">
+        <div class="caja">
+          <img src="imagenes/" alt="">
+        </div>
+      </div>
     </div>
   </body>
 </html>
