se ha hecho la seccion de Pop Punk de USA y se ha puesto un video para esta

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -142,9 +142,19 @@
     <div class="seccion-4">
       <div class="caja-4">
         <div class="caja">
-          <img src="imagenes/" alt="">
+          <img src="imagenes/ejemplos/blink-182.jpg" alt=""><h3>Blink-182</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/the-offspring.jpg" alt=""><h3>The Offspring</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/green-day.jpg" alt=""><h3>Green Day</h3>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/sum-41.jpg" alt=""><h3>Sum 41</h3>
         </div>
       </div>
     </div>
+    <iframe width="972" height="729" src="https://www.youtube.com/embed/Oc07hRhkY_Q" title="Sum 41 - The Hell Song (Live at Warped Tour 2007)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </body>
 </html>
