se esta acabando la seccion de straight edge en USA y se va a agregar un video para esta

--- a/Pagina Web/USA.html
+++ b/Pagina Web/USA.html
@@ -48,7 +48,7 @@
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/straight edge.jpg" alt="" />
-          <h3>Straight Edge</h3>
+          <a href="#Straight Edge"><h3>Straight Edge</h3></a>
         </div>
         <div class="caja">
           <img src="imagenes/ejemplos/post-hardcore.jpg" alt="" />
@@ -142,19 +142,57 @@
     <div class="seccion-4">
       <div class="caja-4">
         <div class="caja">
-          <img src="imagenes/ejemplos/blink-182.jpg" alt=""><h3>Blink-182</h3>
+          <img src="imagenes/ejemplos/blink-182.jpg" alt="" />
+          <h3>Blink-182</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/the-offspring.jpg" alt=""><h3>The Offspring</h3>
+          <img src="imagenes/ejemplos/the-offspring.jpg" alt="" />
+          <h3>The Offspring</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/green-day.jpg" alt=""><h3>Green Day</h3>
+          <img src="imagenes/ejemplos/green-day.jpg" alt="" />
+          <h3>Green Day</h3>
         </div>
         <div class="caja">
-          <img src="imagenes/ejemplos/sum-41.jpg" alt=""><h3>Sum 41</h3>
+          <img src="imagenes/ejemplos/sum-41.jpg" alt="" />
+          <h3>Sum 41</h3>
         </div>
       </div>
     </div>
-    <iframe width="972" height="729" src="https://www.youtube.com/embed/Oc07hRhkY_Q" title="Sum 41 - The Hell Song (Live at Warped Tour 2007)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe
+      width="972"
+      height="729"
+      src="https://www.youtube.com/embed/Oc07hRhkY_Q"
+      title="Sum 41 - The Hell Song (Live at Warped Tour 2007)"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
+    <div class="Straight-Edge" id="Straight Edge">
+      <h3>Straight Edge</h3>
+      <p>
+        El Straight Edge es una vertienten del Hardcore Punk, que ha diferencia
+        de su predecesor esta escena se abstiene de las drogas, del alcohol y de
+        los excesos, también del straight edge salieron las vertienes Youth Crew
+        y Straight Edge Vegano
+      </p>
+    </div>
+    <div class="seccion-5">
+      <div class="caja-5">
+        <div class="caja">
+          <img src="imagenes/ejemplos/minor-threat.jpg" alt=""><a href="https://en.wikipedia.org/wiki/Minor_Threat"><h3>Minor Threat</h3></a>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/youth-of-today.jpg" alt=""><a href="https://en.wikipedia.org/wiki/Youth_of_Today"><h3>Youth Of Today</h3></a>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/GORILLA-BISCUITS.jpg" alt=""><a href="https://en.wikipedia.org/wiki/Gorilla_Biscuits"><h3>Gorilla Biscuits</h3></a>
+        </div>
+        <div class="caja">
+          <img src="imagenes/ejemplos/Warzone-Band.jpg" alt=""><a href="https://en.wikipedia.org/wiki/Warzone_(band)"><h3>Warzone</h3></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
