se esta haciendo el apartado de japon y en la seccion de paises se ha puesto que el boton de Japon redirigia a esta seccion

--- a/Pagina Web/index.html
+++ b/Pagina Web/index.html
@@ -29,11 +29,11 @@
       </div>
       <div class="Inicio">
         <h1>Bienvenido a mi Blog de Musica</h1>
-        <a href="menu.html"><button>Explorar</button></a>
+        <a href="menu.html"><button class="boton">Explorar</button></a>
       </div>
       <div class="Generos">
         <h2>Descubre Generos de Musica!</h2>
-        <a href="generos.html"><button>Explorar</button></a>
+        <a href="generos.html"><button class="boton">Explorar</button></a>
       </div>
     </div>
   </body>
