--- a/Pagina Web/generos.html
+++ b/Pagina Web/generos.html
@@ -16,19 +16,19 @@
         <nav>
           <ul>
             <li>
-              <a href="punk.html"><button>Punk</button></a>
+              <a href="punk.html"><button class="boton">Punk</button></a>
             </li>
             <li>
-              <a href="metal.html"><button>Metal</button></a>
+              <a href="metal.html"><button class="boton">Metal</button></a>
             </li>
             <li>
-              <a href="rock.html"><button>Rock</button></a>
+              <a href="rock.html"><button class="boton">Rock</button></a>
             </li>
             <li>
-              <a href="Electronica"><button>Electronica</button></a>
+              <a href="Electronica"><button class="boton">Electronica</button></a>
             </li>
             <li>
-              <a href="Pop"><button>Pop</button></a>
+              <a href="Pop"><button class="boton">Pop</button></a>
             </li>
           </ul>
         </nav>
