--- a/Pagina Web/paises.html
+++ b/Pagina Web/paises.html
@@ -34,6 +34,6 @@
         <a href=""><img src="imagenes/banderas-paises/LATAM.jpg" alt=""><h3 class="texto-magico">Latino America</h1></a>
     </div>
     <div class="cajita-magica">
-      <a href=""><img src="imagenes/banderas-paises/Japon.jpg" alt=""><h3 class="texto-magico">Japon</h1></a>
+      <a href="japon.html"><img src="imagenes/banderas-paises/Japon.jpg" alt=""><h3 class="texto-magico">Japon</h1></a>
   </body>
 </html>
