se han subido imagenes para la seccion de Japon

--- a/Pagina Web/japon.html
+++ b/Pagina Web/japon.html
@@ -22,19 +22,37 @@
         Hardcore hasta el Ska Punk, el punk en Japon no llegaria hasta los 80
         con bandas como The Swankys, GISM, The Stalin o Gauze
       </p>
+      <h3>Bandas de Hardcore Punk</h3>
       <div class="seccion-japon-bandas">
         <div class="caja-6">
           <div class="caja">
-            <h3>The Swankys</h3>
+            <img src="imagenes/ejemplos/The-Swankys.jpg" alt=""> <h3>The Swankys</h3>
           </div>
           <div class="caja">
-            <h3>The Stalin</h3>
+            <img src="imagenes/ejemplos/the stalin.jpg" alt=""><h3>The Stalin</h3>
           </div>
           <div class="caja">
-            <h3>GISM</h3>
+            <img src="imagenes/ejemplos/GISM.jpg" alt=""><h3>GISM</h3>
           </div>
           <div class="caja">
-            <h3>Gauze</h3>
+            <img src="imagenes/ejemplos/gazue.jpg" alt=""><h3>Gauze</h3>
+          </div>
+        </div>
+      </div>
+      <div class="bandas-ska-japon">
+        <h3>Bandas de Ska Punk Japon</h3>
+        <div class="caja-7">
+          <div class="caja">
+            <img src="imagenes/ejemplos/gelugugu.jpg" alt=""><h3>Gelugugu</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/snail-ramp.jpg" alt=""><h3>Snail Ramp</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/fruity.jpg" alt=""><h3>Fruity</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/five-state-drive.jpg" alt=""><h3>Five State Drive</h3>
           </div>
         </div>
       </div>
