se ha acabado la seccion de Japon y se han subido 4 imagenes para esta

--- a/Pagina Web/japon.html
+++ b/Pagina Web/japon.html
@@ -56,5 +56,22 @@
           </div>
         </div>
       </div>
+      <div class="bandas-punk-rock">
+        <h3>Bandas de Punk Rock</h3>
+        <div class="caja-8">
+          <div class="caja">
+            <img src="imagenes/ejemplos/hi-standard.jpg" alt=""><h3>Hi-Standard</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/teengenerate.jpg" alt=""><h3>Teengenerate</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/guitar-wolf.jpg" alt=""><h3>Guitar Wolf</h3>
+          </div>
+          <div class="caja">
+            <img src="imagenes/ejemplos/otoboke-beaver.jpg" alt=""><h3>Otoboke Beaver</h3>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
