se han subido 5 imagenes para el apartado de latinoamerica y se esta acabando este

--- a/Pagina Web/paises.html
+++ b/Pagina Web/paises.html
@@ -31,7 +31,7 @@
     </div>
     <div class="cajita-main2">
       <div class="cajita-magica">
-        <a href=""><img src="imagenes/banderas-paises/LATAM.jpg" alt=""><h3 class="texto-magico">Latino America</h1></a>
+        <a href="latam.html"><img src="imagenes/banderas-paises/LATAM.jpg" alt=""><h3 class="texto-magico">Latino America</h1></a>
     </div>
     <div class="cajita-magica">
       <a href="japon.html"><img src="imagenes/banderas-paises/Japon.jpg" alt=""><h3 class="texto-magico">Japon</h1></a>
