se ha acabado la seccion de latino america

--- a/Pagina Web/latam.html
+++ b/Pagina Web/latam.html
@@ -74,5 +74,42 @@
         </div>
       </div>
     </main>
+    <section class="Ska-Latam">
+      <h3>El Ska en Latino-America</h3>
+      <p>
+        El Ska en Latino-America llegó en los 80, a manos de bandas como Los
+        Fabulosos Cadillacs y Los Intocables, pero no empezaria tomar
+        popularidad en los 90 con bandas como Sekta Core, Inspector, Maldita
+        Vecindad, Salón Victoria y Nana Pancha
+      </p>
+      <div class="caja-10">
+        <div class="caja">
+            <img src="imagenes/ejemplos/cadillacs-banda.jpg" alt=""><h3>Los Fabulosos Cadillacs</h3>
+        </div>
+        <div class="caja">
+            <img src="imagenes/ejemplos/los-decadentes-banda.jpg" alt=""><h3>Los Autenticos Decadentes</h3>
+        </div>
+        <div class="caja">
+            <img src="imagenes/ejemplos/madilta-vecindad.jpg" alt=""><h3>Maldita Vecindad Y Los Hijos del Quinto Patio</h3>
+        </div>
+        <div class="caja">
+            <img src="imagenes/ejemplos/los-intocables.jpg" alt=""><h3>Los Intocables</h3>
+        </div>
+      </div>
+      <div class="caja-11">
+        <div class="caja">
+            <img src="imagenes/ejemplos/sekta-core.jpeg" alt=""><h3>Sekta Core</h3>
+        </div>
+        <div class="caja">
+            <img src="imagenes/ejemplos/Inspector-banda.jpg" alt=""><h3>Inspector</h3>
+        </div>
+        <div class="caja">
+            <img src="imagenes/ejemplos/salon-victoria.jpg" alt=""><h3>Salon Victoria</h3>
+        </div>
+        <div class="caja">
+            <img src="imagenes/ejemplos/nana-pancha.jpg" alt=""><h3>Nana Pancha</h3>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
